# terry-sso

./: README.md  cloudbuild.yaml
back-end-testsite/: index.js  package-lock.json  package.json
front-end-login/: .eslintrc  index.html  package-lock.json  package.json  tsconfig.json
front-end-login/src/: Error.tsx  index.tsx  styles.scss
front-end-sdk/: package.json
front-end-sdk/src/: index.ts
front-end-testsite/: .gitignore  index.html  package-lock.json  package.json
front-end-testsite/src/: index.ts
server/: Cargo.toml  Dockerfile  Makefile  README.md  private_key.der  private_key.pem  public_key.der  public_key.pem
server/src/: dao.rs  main.rs  token.rs
