[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3"
base64 = "0.13.0"
jwt-simple = "0.10.8"
rust-s3 = "0.26.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
sha2 = "0.10.1"
uuid = { version = "0.8", features = ["serde", "v4"] }